Version 5.3.1.8
file/untar: added

Version 5.3.1.7
compiler/zo-structs: generalize flonum? field to type
 field in localref, let-one, and fun 

Version 5.3.1.6
racket/unsafe/ops: added unsafe-cons-list

Version 5.3.1.5
racket/gui: added get-current-mouse-state

Version 5.3.1.2
compiler/zo-structs: added a constantness field to module-variable

Version 5.3.1.1
Added arguments to impersonate-prompt-tag and chaperone-prompt-tag
 to support interposition on non-composable continuation results

Version 5.3.1, October 2012
Changed make-log-receiver to accept a logger name as an
 event filter
Addded define-logger
Changed -W, -L, PLTSTDERR, and PLTSYSLOG to support log
 filters of the form "<level> <name>=<level> ..."
Changed log-error, etc., to support format mode
Added racket/format, which is re-exported by racket
Added #:break and #:final clauses to for forms
Added exn:break:hang-up and exn:break:terminate, added
 extra argument to break-thread and place-break, and
 redirect SIGTERM and SIGHUP as breaks
Add #:fill option to for/vector, for*/vector, for/flvector,
 for*/flvector, for/fxvector, and for*/fxvector
Added PLTCOMPILEDROOTS and --compiled/-R command-line flag
Added reroot-path
Changed a thread's initial prompt to use the default handler
 (instead of accepting and ignoring abort arguments)
ffi/unsafe: added cpointer-gcable?
racket/class: added dynamic-get-field and dynamic-set-field!
racket/set: added set-first and set-rest, sets are streams
racket/require-transformer: an import's module path can be syntax
scribble/base: add items/c
scribble/decode: add spliceof
syntax/for-body: added

Version 5.3, August 2012
Added submodules, including module*
Changed the format of error messages
Added raise-argument-error, raise-result-error,
 raise-arguments-error, raise-range-error
Added impersonate-continuation-mark-key,
 chaperone-continuation-mark-key, make-continuation-mark-key,
 continuation-mark-key?, impersonate-prompt-tag, and
 chaperone-prompt-tag